--- a/src/app/match-events/components/match-event-edit-component/match-event-edit-panel.component.html
+++ b/src/app/match-events/components/match-event-edit-component/match-event-edit-panel.component.html
@@ -13,6 +13,9 @@
     <mat-form-field class="full-width">
         <input matInput placeholder="Минута" formControlName="minute">
     </mat-form-field>
+    <mat-form-field class="full-width">
+        <input matInput placeholder="Добавленное время (минута)" formControlName="addMinutes">
+    </mat-form-field>
     <div class="full-width text-center">
         <button mat-raised-button color="warn" class="full-width" type="submit"
             [disabled]="!editMatchEventForm.valid">Сохранить</button>
