updated material to angular 13

--- a/src/app/wishes/pages/wish-edit/wish-edit.component.html
+++ b/src/app/wishes/pages/wish-edit/wish-edit.component.html
@@ -4,7 +4,7 @@
             <input matInput placeholder="Заголовок" formControlName="title">
         </mat-form-field>
         <mat-form-field class="full-width">
-            <textarea matInput [matTextareaAutosize]="true" rows="4" placeholder="Сообщение"
+            <textarea matInput rows="4" placeholder="Сообщение"
                 formControlName="message"></textarea>
         </mat-form-field>
         <mat-form-field class="full-width">
