--- a/src/app/match-persons/components/match-person-info/match-person-info.component.html
+++ b/src/app/match-persons/components/match-person-info/match-person-info.component.html
@@ -10,5 +10,7 @@
     <span *ngIf="data.isInformer">
         <span role="button" (click)="onSelectPerson(person)" class="material-icons">edit</span>
         <span role="button" (click)="showDeleteModal(person)" class="material-icons">clear</span>
+        <span role="button" (click)="onUp(person)" class="material-icons" *ngIf="isPlayer">arrow_upward</span>
+        <span role="button" (click)="onDown(person)" class="material-icons" *ngIf="isPlayer">arrow_downward</span>
     </span>
 </ng-container>
