--- a/src/app/seasons/pages/season-calendar/season-calendar.component.html
+++ b/src/app/seasons/pages/season-calendar/season-calendar.component.html
@@ -32,24 +32,28 @@
                         </td>
                         <td>
                             <div class="flex-v-c">
-                                <span class="text-center">
+                                <span class="club text-center">
                                     <img class="club-logo" [src]="match.homeClubLogo" [alt]="match.homeClubName">
-                                    <span [textContent]="match.homeClubName"></span>
+                                    <span class="club-name" [textContent]="match.homeClubName"></span>
                                 </span>
-                                <span class="text-center">
-                                    <a [routerLink]="['/matches', match.id]"> <b [textContent]="match.scoreHome"></b>:<b
-                                            [textContent]="match.scoreAway"></b></a>
+                                <span class="text-center score">
+                                    <a [routerLink]="['/matches', match.id]">
+                                        <span *ngIf="match.scoreHome == null; else score">-:-</span>
+                                        <ng-template #score>
+                                            <b [textContent]="match.scoreHome"></b>:<b [textContent]="match.scoreAway"></b>
+                                        </ng-template>
+                                    </a>
                                 </span>
-                                <span class="text-center">
+                                <span class="club text-center">
                                     <img class="club-logo" [src]="match.awayClubLogo" [alt]="match.awayClubName">
-                                    <span [textContent]="match.awayClubName"></span>
+                                    <span class="club-name" [textContent]="match.awayClubName"></span>
                                 </span>
                             </div>
                         </td>
                         <td class="stadium">
                             <span [textContent]="match.stadiumName"></span>
                         </td>
-                        <td class="flex-space-around" style="height: 100%">
+                        <td class="links-column flex-space-around">
                             <a *ngIf="match.previewId" [routerLink]="['/news', match.previewId]">Превью</a>
                             <a *ngIf="match.reportUrl" [routerLink]="['/news', match.reportUrl]">Отчет</a>
                             <a *ngIf="!match.reportUrl" [routerLink]="['/matches', match.id]">Обсуждение</a>
