--- a/src/app/seasons/pages/season-statistics/season-statistics.component.html
+++ b/src/app/seasons/pages/season-statistics/season-statistics.component.html
@@ -6,162 +6,177 @@
         </mat-option>
     </mat-select>
 </mat-form-field>
-<!--<div>
+<div class="table-container">
     <table mat-table [dataSource]="statistics" matSort class="statistic-table full-width">
-
-        <ng-container matColumnDef="personName1" sticky>
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Игрок </th>
+        
+        <ng-container matColumnDef="personName" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Игрок</th>
             <td mat-cell *matCellDef="let statistic">
                 <span [textContent]="statistic.personName"></span>
             </td>
         </ng-container>
-
-        <ng-container matColumnDef="goals1">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                <td>АПЛ</td>
-                <td>ЛЧ</td>
-                <td>ЛЕ</td>
-                <td>КЛ</td>
-                <td>КА</td>
-                <td>Σ</td> 
-            </th>
-            <td mat-cell *matCellDef="let statistic">
-                <season-statistics-item [personStat]="statistic.goals"></season-statistics-item>
-            </td>
-
+        
+        <ng-container matColumnDef="goals-epl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>АПЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.goals.epl}}</td>
         </ng-container>
-
-        <ng-container matColumnDef="assists1">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-            <td mat-cell *matCellDef="let statistic">
-                <season-statistics-item [personStat]="statistic.assists"></season-statistics-item>
-            </td>
+        
+        <ng-container matColumnDef="goals-cl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЧ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.goals.cl}}</td>
         </ng-container>
-
-        <ng-container matColumnDef="yellows1">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-            <td mat-cell *matCellDef="let statistic">
-                <season-statistics-item [personStat]="statistic.yellows"></season-statistics-item>
-            </td>
+        
+        <ng-container matColumnDef="goals-lc">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЕ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.goals.lc}}</td>
         </ng-container>
-
-        <ng-container matColumnDef="reds1">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-            <td mat-cell *matCellDef="let statistic">
-                <season-statistics-item [personStat]="statistic.reds"></season-statistics-item>
-            </td>
+        
+        <ng-container matColumnDef="goals-el">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.goals.el}}</td>
         </ng-container>
-
-        <!-- Player ->
-        <ng-container matColumnDef="player">
-            <th mat-header-cell *matHeaderCellDef [style.text-align]="center" [attr.colspan]="1">
-                Игрок
-            </th>
+        
+        <ng-container matColumnDef="goals-ec">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КА</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.goals.ec}}</td>
         </ng-container>
-
-        <!-- Header row goals ->
+        
         <ng-container matColumnDef="goals">
-            <th mat-header-cell *matHeaderCellDef [style.text-align]="center" [attr.colspan]="1">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Σ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.goals.total}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="assists-epl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>АПЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.assists.epl}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="assists-cl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЧ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.assists.cl}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="assists-lc">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЕ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.assists.lc}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="assists-el">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.assists.el}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="assists-ec">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КА</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.assists.ec}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="assists">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Σ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.assists.total}}</td>
+        </ng-container>
+
+        
+        <ng-container matColumnDef="yellows-epl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>АПЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.yellows.epl}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="yellows-cl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЧ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.yellows.cl}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="yellows-lc">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЕ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.yellows.lc}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="yellows-el">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.yellows.el}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="yellows-ec">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КА</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.yellows.ec}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="yellows">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Σ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.yellows.total}}</td>
+        </ng-container>
+
+        
+        <ng-container matColumnDef="reds-epl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>АПЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.reds.epl}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="reds-cl">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЧ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.reds.cl}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="reds-lc">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ЛЕ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.reds.lc}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="reds-el">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КЛ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.reds.el}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="reds-ec">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>КА</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.reds.ec}}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="reds">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Σ</th>
+            <td mat-cell *matCellDef="let statistic">{{statistic.reds.total}}</td>
+        </ng-container>
+
+        <!-- Player -->
+        <ng-container matColumnDef="player" sticky>
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="1">
+             <!-- [style.text-align]="center" -->                
+            </th>
+        </ng-container>
+
+        <!-- Header row goals -->
+        <ng-container matColumnDef="goals-header">
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="6">
+                <!--  -->
                 Голы
             </th>
         </ng-container>
-        <!-- Header row assists ->
-        <ng-container matColumnDef="assists">
-            <th mat-header-cell *matHeaderCellDef [style.text-align]="center" [attr.colspan]="1">
+        <!-- Header row assists -->
+        <ng-container matColumnDef="assists-header">
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="6">
+                <!-- [style.text-align]="center" -->
                 Ассисты
             </th>
         </ng-container>
-        <!-- Header row yellows ->
-        <ng-container matColumnDef="yellows">
-            <th mat-header-cell *matHeaderCellDef [style.text-align]="center" [attr.colspan]="1">
+        <!-- Header row yellows -->
+        <ng-container matColumnDef="yellows-header">
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="6">
+                <!-- [style.text-align]="center" -->
                 Желтые
             </th>
         </ng-container>
-        <!-- Header row reds ->
-        <ng-container matColumnDef="reds">
-            <th mat-header-cell *matHeaderCellDef [style.text-align]="center" [attr.colspan]="1">
+        <!-- Header row reds -->
+        <ng-container matColumnDef="reds-header">
+            <th mat-header-cell *matHeaderCellDef [attr.colspan]="6">
+                <!-- [style.text-align]="center" -->
                 Красные
             </th>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['player', 'goals', 'assists', 'yellows', 'reds']"></tr>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="['player', 'goals-header', 'assists-header', 'yellows-header', 'reds-header']"
+        class="top"></tr>
+        <tr mat-header-row mat-s *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index;" [class.odd]="i % 2 === 0"></tr>
     </table>
-</div>-->
-<div style="position: relative;">
-    <div class="overflowable" style="margin-left: 150px; width: calc(100%-150px);
-                                                                                                 overflow-x: auto;
-                                                                                                 overflow-y: auto;
-                                                                                                 padding-bottom: 5px;
-                                                                                                 ">
-        <table class="table table-condensed table-striped table-bordered table-hover"
-            style="border-collapse: separate; ">
-            <thead>
-                <tr>
-                    <td style="position: absolute; left: 0; top: auto; width: 150px"></td>
-                    <td colspan="6">Голы</td>
-                    <td colspan="6">Передачи</td>
-                    <td colspan="6">ЖК</td>
-                    <td colspan="6">КК</td>
-                </tr>
-                <tr>
-                    <td style="position: absolute; left: 0; width: 150px; top: auto">Игрок</td>
-                    <td>АПЛ</td>
-                    <td>ЛЧ</td>
-                    <td>ЛЕ</td>
-                    <td>КЛ</td>
-                    <td>КА</td>
-                    <td>Σ</td>
-                    <td>АПЛ</td>
-                    <td>ЛЧ</td>
-                    <td>ЛЕ</td>
-                    <td>КЛ</td>
-                    <td>Σ</td>
-                    <td>КА</td>
-                    <td>АПЛ</td>
-                    <td>ЛЧ</td>
-                    <td>ЛЕ</td>
-                    <td>КЛ</td>
-                    <td>КА</td>
-                    <td>Σ</td>
-                    <td>АПЛ</td>
-                    <td>ЛЧ</td>
-                    <td>ЛЕ</td>
-                    <td>КЛ</td>
-                    <td>КА</td>
-                    <td>Σ</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of statistics">
-                    <td style="position: absolute; left: 0; width: 150px" [textContent]="item.personName"></td>
-                    <td [textContent]="item.goals.epl"></td>
-                    <td [textContent]="item.goals.cl"></td>
-                    <td [textContent]="item.goals.lc"></td>
-                    <td [textContent]="item.goals.el"></td>
-                    <td [textContent]="item.goals.ec"></td>
-                    <td [textContent]="item.goals.total"></td>
-                    <td [textContent]="item.assists.epl"></td>
-                    <td [textContent]="item.assists.cl"></td>
-                    <td [textContent]="item.assists.lc"></td>
-                    <td [textContent]="item.assists.el"></td>
-                    <td [textContent]="item.assists.ec"></td>
-                    <td [textContent]="item.assists.total"></td>
-                    <td [textContent]="item.yellows.epl"></td>
-                    <td [textContent]="item.yellows.cl"></td>
-                    <td [textContent]="item.yellows.lc"></td>
-                    <td [textContent]="item.yellows.el"></td>
-                    <td [textContent]="item.yellows.ec"></td>
-                    <td [textContent]="item.yellows.total"></td>
-                    <td [textContent]="item.reds.epl"></td>
-                    <td [textContent]="item.reds.cl"></td>
-                    <td [textContent]="item.reds.lc"></td>
-                    <td [textContent]="item.reds.el"></td>
-                    <td [textContent]="item.reds.ec"></td>
-                    <td [textContent]="item.reds.total"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
