--- a/src/app/seasons/pages/season-statistics/season-statistics.component.scss
+++ b/src/app/seasons/pages/season-statistics/season-statistics.component.scss
@@ -1,3 +1,43 @@
-﻿    .overflowable {
+﻿th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
+    padding-left: 12px;
+}
+
+th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
+    padding-right: 12px;
+}
+    
+    td {
+        text-align: center;
+    }
+    
+    .overflowable {
         overflow-y: auto;
     }
+
+
+    .top > th:nth-child(even), :not(.top) > th:nth-child(even), td:nth-child(even) {
+        background-color: gainsboro;
+    }
+
+    .mat-row:hover .mat-cell {
+        background-color: gainsboro;
+    }
+
+    .mat-header-cell, .mat-cell {
+        width:29px;
+    }
+
+    .mat-column-personName {
+        width: 50px;
+    }
+
+    .table-container {
+        overflow-x: auto;
+        width: 100%;
+    }
+
+::ng-deep {
+    th.mat-header-cell {
+        text-align: center !important;
+    }
+}
