--- a/src/app/lazy-modules/admin-top-panel/components/admin-top-panel.component.scss
+++ b/src/app/lazy-modules/admin-top-panel/components/admin-top-panel.component.scss
@@ -5,3 +5,13 @@
 .panel {     
     background-color: lightcyan;
 }
+
+.green {
+    background-color: white;
+    color: green;
+}
+
+.red {
+    background-color: white;
+    color: red;
+}
