--- a/src/assets/styles/layout/_checkboxes.scss
+++ b/src/assets/styles/layout/_checkboxes.scss
@@ -15,7 +15,7 @@
 
     &.mat-green-checkbox {
         .mat-checkbox-frame {
-            border-color: $stratus-blue-2;
+      //      border-color: $blue-2;
         }
 
         .mat-checkbox-checkmark-path {
@@ -29,11 +29,11 @@
 
     &.review-checkbox:not(.mat-checkbox-disabled) {
         .mat-checkbox-frame {
-            border-color: $stratus-blue-2;
+           // border-color: $blue-2;
         }
 
         &.mat-checkbox-checked .mat-checkbox-background {
-            background-color: $stratus-blue-2;
+         //   background-color: $-blue-2;
         }
     }
 }
