--- a/src/assets/styles/layout/_dropdowns.scss
+++ b/src/assets/styles/layout/_dropdowns.scss
@@ -28,7 +28,7 @@
     }
 
     .mat-select-arrow {
-        color: $stratus-blue-2;
+    //   color: $blue-2;
     }
 
     .mat-select-value {
@@ -36,10 +36,10 @@
     }
 
     .mat-form-field-outline-thick {
-        color: $stratus-blue-2;
+     //   color: $blue-2;
     }
 
     .mat-form-field-outline {
-        color: $stratus-blue-2;
+       // color: $blue-2;
     }
 }
