--- a/src/assets/styles/layout/_radiobuttons.scss
+++ b/src/assets/styles/layout/_radiobuttons.scss
@@ -1,7 +1,6 @@
 @import 'src/assets/styles/abstracts/module';
 
-.radio-button-stratus {
+
     .mat-radio-outer-circle {
-        border-color: $stratus-blue-2;;
+   //     border-color: $-blue-2;;
     }
-}
