--- a/src/assets/styles/layout/module.scss
+++ b/src/assets/styles/layout/module.scss
@@ -1,12 +1,4 @@
-@import// 'buttons',
-      //  'checkboxes',
-   //     'dialogs',
-   //     'forms',
+@import
         'global',
-    //    'inputs',
-     //   'slider',
-      //  'stepper',
         'table'
- //      , 'dropdowns'
-      //  ,'radiobuttons'
       ;
