--- a/src/assets/styles/layout/_table.scss
+++ b/src/assets/styles/layout/_table.scss
@@ -2,7 +2,7 @@
 
 .mat-table {
     width: 100%;
-    background-color: transparent; //to override the angular default (or something like that, whatever this is: wentrum-app/node_modules/@angular/material/_theming.scss)
+    background-color: transparent; //to override the angular default (or something like that, whatever this is: /node_modules/@angular/material/_theming.scss)
 
     .mat-header-cell {
         font-weight: $bold-font-weight;
@@ -16,7 +16,7 @@
         }
      
         &.selected-row {
-    //        background-color: $stratus-blue-4;
+    //        background-color: $-blue-4;
         }
     }
 
