Added IE browser outdated banner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
                 </div>
             </ng-container>
             <div class="main-container" [style.order]="1">
+                <b class='ie'>Ваш браузер сильно устарел, из-за этого фунциональность сайта ограничена, пожалуйста, используйте более современный браузер.</b>
                 <router-outlet></router-outlet>
             </div>
             <ng-container *ngIf="!data.mobile">
