--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,23 @@
     width: 100%;
 }
 
+/* Hide IE banner by default */
+.ie {
+    background-color: lightyellow;
+    padding: 8px;
+    font-size: 16px;
+    color: red;    
+    display: none;
+}
+
+/* Show IE banner on IE10/11 */
+@media screen and (-ms-high-contrast: active),
+       screen and (-ms-high-contrast: none) {
+  .ie {
+    display: block;
+  }
+}
+
 @media (min-width: 768px) {
     .left-container {
         //     order: 0;
