--- a/src/app/comments/shared/comment-detail/comment-detail.component.html
+++ b/src/app/comments/shared/comment-detail/comment-detail.component.html
@@ -6,7 +6,7 @@
                 <span>
                     <span>
                         <a [routerLink]="['/', item.typeName| lowercase, item.materialId || item.matchId]"
-                            fragment="com{{item.id}}" [textContent]="item.number || 0" mat-tooltip="К комментарию"></a>
+                            fragment="com{{item.id}}" [textContent]="item.number || '(новый)'" mat-tooltip="К комментарию"></a>
                     </span>&nbsp;
                     <a [routerLink]="['/users', item.authorId]" [textContent]="item.authorUserName"></a>
                 </span>
